--- a/SweetTips/sweettips/src/main/res/anim/toast_enter.xml
+++ b/SweetTips/sweettips/src/main/res/anim/toast_enter.xml
@@ -1,34 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
-    <translate
-        android:fromXDelta="0"
-        android:fromYDelta="0"
-        android:toXDelta="0"
-        android:toYDelta="85"
-        android:duration="1"
-        />
-    <translate
-        android:fromXDelta="0"
-        android:fromYDelta="0"
-        android:toXDelta="0"
-        android:toYDelta="-105"
-        android:duration="200"
-        android:fillAfter="true"
-        android:interpolator="@android:anim/decelerate_interpolator"
-        />
-    <alpha
-        android:fromAlpha="0"
-        android:toAlpha="1"
-        android:duration="100"
-        />
-    <translate
-        android:fromXDelta="0"
-        android:fromYDelta="0"
-        android:toXDelta="0"
-        android:toYDelta="20"
-        android:duration="40"
-        android:fillAfter="true"
-        android:startOffset="240"
-        android:interpolator="@android:anim/decelerate_interpolator"
-        />
-</set>
+<!--
+/* //device/apps/common/res/anim/fade_in.xml
+**
+** Copyright 2007, The Android Open Source Project
+**
+** Licensed under the Apache License, Version 2.0 (the "License"); 
+** you may not use this file except in compliance with the License. 
+** You may obtain a copy of the License at 
+**
+**     http://www.apache.org/licenses/LICENSE-2.0 
+**
+** Unless required by applicable law or agreed to in writing, software 
+** distributed under the License is distributed on an "AS IS" BASIS, 
+** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
+** See the License for the specific language governing permissions and 
+** limitations under the License.
+*/
+-->
+<!--android:interpolator="@interpolator/decelerate_quad"-->
+<alpha xmlns:android="http://schemas.android.com/apk/res/android"
+        android:interpolator="@android:interpolator/decelerate_quad"
+        android:fromAlpha="0.0" android:toAlpha="1.0"
+        android:duration="@android:integer/config_longAnimTime" />
