--- a/SweetTips/sweettips/src/main/res/layout/transient_notification.xml
+++ b/SweetTips/sweettips/src/main/res/layout/transient_notification.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     >
-    <TextView
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
-        android:textAppearance="@style/TextAppearance_SweetToast"
-        android:textColor="@android:color/white"
-        android:textSize="@dimen/toast_text_size"
-        android:textStyle="normal"
-        />
+    <LinearLayout
+        android:id="@+id/ll_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        >
+        <TextView
+            android:id="@+id/message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center_horizontal"
+            android:textAppearance="@style/TextAppearance_SweetToast"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/toast_text_size"
+            android:textStyle="normal"
+            />
+    </LinearLayout>
 </LinearLayout>
-
-
